[gd_scene load_steps=3 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://World/Playfield.tscn" type="PackedScene" id=2]

[node name="World" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="LockDownTimer" type="Timer" parent="."]

[node name="Playfield" parent="." instance=ExtResource( 2 )]
position = Vector2( -3, -41 )

[node name="ReferrenceNumbers" type="Control" parent="Playfield"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Playfield/ReferrenceNumbers"]
margin_left = -8.0
margin_top = 282.0
margin_bottom = 298.0
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Playfield/ReferrenceNumbers"]
margin_left = -16.0
margin_top = 201.0
margin_bottom = 217.0
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Playfield/ReferrenceNumbers"]
margin_left = -16.0
margin_top = 122.0
margin_bottom = 138.0
text = "15"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Playfield/ReferrenceNumbers"]
margin_left = -16.0
margin_top = 41.0
margin_bottom = 57.0
text = "20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="Playfield"]
position = Vector2( 83, 202 )
current = true
zoom = Vector2( 0.452, 0.452 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpawnPositions" type="Node" parent="."]

[node name="iSpawn" type="Position2D" parent="SpawnPositions"]
visible = false
position = Vector2( 80, 0 )

[node name="jSpawn" type="Position2D" parent="SpawnPositions"]
visible = false
position = Vector2( 88, -8 )

[node name="elSpawn" type="Position2D" parent="SpawnPositions"]
visible = false
position = Vector2( 72, -8 )

[node name="oSpawn" type="Position2D" parent="SpawnPositions"]
visible = false
position = Vector2( 80, -16 )

[node name="sSpawn" type="Position2D" parent="SpawnPositions"]
visible = false
position = Vector2( 88, -8 )

[node name="tSpawn" type="Position2D" parent="SpawnPositions"]
visible = false
position = Vector2( 72, -8 )

[node name="zSpawn" type="Position2D" parent="SpawnPositions"]
visible = false
position = Vector2( 72, -8 )

[node name="LockedMinos" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Row1" type="Node2D" parent="LockedMinos"]

[node name="Row2" type="Node2D" parent="LockedMinos"]

[node name="Row3" type="Node2D" parent="LockedMinos"]

[node name="Row4" type="Node2D" parent="LockedMinos"]

[node name="Row5" type="Node2D" parent="LockedMinos"]

[node name="Row6" type="Node2D" parent="LockedMinos"]

[node name="Row7" type="Node2D" parent="LockedMinos"]

[node name="Row8" type="Node2D" parent="LockedMinos"]

[node name="Row9" type="Node2D" parent="LockedMinos"]

[node name="Row10" type="Node2D" parent="LockedMinos"]

[node name="Row11" type="Node2D" parent="LockedMinos"]

[node name="Row12" type="Node2D" parent="LockedMinos"]

[node name="Row13" type="Node2D" parent="LockedMinos"]

[node name="Row14" type="Node2D" parent="LockedMinos"]

[node name="Row15" type="Node2D" parent="LockedMinos"]

[node name="Row16" type="Node2D" parent="LockedMinos"]

[node name="Row17" type="Node2D" parent="LockedMinos"]

[node name="Row18" type="Node2D" parent="LockedMinos"]

[node name="Row19" type="Node2D" parent="LockedMinos"]

[node name="Row20" type="Node2D" parent="LockedMinos"]

[node name="Row21" type="Node2D" parent="LockedMinos"]

[node name="Row22" type="Node2D" parent="LockedMinos"]

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 24, 312 )
[connection signal="timeout" from="LockDownTimer" to="." method="_on_LockDownTimer_timeout"]
